@@ -1,7 +1,7 @@
 # ------------------------------------------------------------------------------
 #  combobox.tcl
 #  This file is part of Unifix BWidget Toolkit
-#  $Id: combobox.tcl,v 1.13 2000/03/10 00:49:21 ericm Exp $
+#  $Id: combobox.tcl,v 1.14 2000/03/13 18:21:47 ericm Exp $
 # ------------------------------------------------------------------------------
 #  Index of commands:
 #     - ComboBox::create
@@ -19,17 +19,13 @@
 namespace eval ComboBox {
     ArrowButton::use
     Entry::use
-    LabelFrame::use
 
-    Widget::bwinclude ComboBox LabelFrame .labf \
-        rename     {-text -label} \
-        remove     {-focus} \
-        prefix     {label -justify -width -anchor -height -font} \
-        initialize {-relief sunken -borderwidth 2}
-
+    Widget::tkinclude ComboBox frame :cmd \
+	    include {-relief -borderwidth -bd -background} \
+	    initialize {-relief sunken -borderwidth 2} \
+	    
     Widget::bwinclude ComboBox Entry .e \
-        remove {-relief -bd -borderwidth -bg -fg} \
-        rename {-foreground -entryfg -background -entrybg}
+        remove {-relief -bd -borderwidth}
 
     Widget::declare ComboBox {
         {-height      TkResource 0  0 listbox}
@@ -40,15 +36,13 @@ namespace eval ComboBox {
         {-postcommand String     "" 0}
     }
 
-    Widget::addmap ComboBox "" :cmd {-background {}}
     Widget::addmap ComboBox ArrowButton .a {
         -foreground {} -background {} -disabledforeground {} -state {}
     }
 
     Widget::syncoptions ComboBox Entry .e {-text {}}
-    Widget::syncoptions ComboBox LabelFrame .labf {-label -text -underline {}}
 
-    ::bind BwComboBox <FocusIn> [list after idle {BWidget::refocus %W %W.labf}]
+    ::bind BwComboBox <FocusIn> [list after idle {BWidget::refocus %W %W.e}]
     ::bind BwComboBox <Destroy> {Widget::destroy %W; rename %W {}}
 
     proc ::ComboBox { path args } { return [eval ComboBox::create $path $args] }
@@ -68,16 +62,15 @@ namespace eval ComboBox {
 #	path	name of the new widget.
 
 proc ComboBox::create { path args } {
-    array set maps [list ComboBox {} :cmd {} .labf {} .e {} .a {}]
+    array set maps [list ComboBox {} :cmd {} .e {} .a {}]
     array set maps [Widget::parseArgs ComboBox $args]
 
-    eval frame $path $maps(:cmd) -highlightthickness 0 -bd 0 -relief flat \
+    eval frame $path $maps(:cmd) -highlightthickness 0 \
 	    -takefocus 0 -class ComboBox
     Widget::initFromODB ComboBox $path $maps(ComboBox)
 
     bindtags $path [list $path BwComboBox [winfo toplevel $path] all]
 
-    set labf  [eval LabelFrame::create $path.labf $maps(.labf) -focus $path.e]
     set entry [eval Entry::create $path.e $maps(.e) \
                    -relief flat -borderwidth 0 -takefocus 1]
     ::bind $path.e <FocusIn> "$path _focus_in"
@@ -99,11 +92,8 @@ proc ComboBox::create { path args } {
 		   -ipadx $ipadx \
                    -command [list "ComboBox::_mapliste $path"]]
 
-    set frame [LabelFrame::getframe $labf]
-
-    pack $arrow -in $frame -side right -fill y
-    pack $entry -in $frame -side left  -fill both -expand yes
-    pack $labf  -fill x -expand yes
+    pack $arrow -side right -fill y
+    pack $entry -side left  -fill both -expand yes
 
     if { [Widget::cget $path -editable] } {
         ::bind $entry <ButtonPress-1> "ComboBox::_unmapliste $path"
@@ -134,14 +124,8 @@ proc ComboBox::create { path args } {
 proc ComboBox::configure { path args } {
     set res [Widget::configure $path $args]
 
-#     if { [Widget::hasChanged $path -values values] |
-#          [Widget::hasChanged $path -height h] |
-#          [Widget::hasChanged $path -font f] } {
-#         destroy $path.shell.listb
-#     }
-
-    if { [Widget::hasChanged $path -editable ed] } {
-        if { $ed } {
+    if { [Widget::hasChangedX $path -editable] } {
+        if { [Widget::cget $path -editable] } {
             ::bind $path.e <ButtonPress-1> "ComboBox::_unmapliste $path"
 	    Entry::configure $path.e -editable true
 	} else {
@@ -158,7 +142,6 @@ proc ComboBox::configure { path args } {
 #  Command ComboBox::cget
 # ------------------------------------------------------------------------------
 proc ComboBox::cget { path option } {
-#    Widget::setoption $path -text [Entry::cget $path.e -text]
     return [Widget::cget $path $option]
 }
 
@@ -167,7 +150,7 @@ proc ComboBox::cget { path option } {
 #  Command ComboBox::setvalue
 # ------------------------------------------------------------------------------
 proc ComboBox::setvalue { path index } {
-    set values [Widget::getoption $path -values]
+    set values [Widget::getMegawidgetOption $path -values]
     set value  [Entry::cget $path.e -text]
     switch -- $index {
         next {
@@ -214,7 +197,7 @@ proc ComboBox::setvalue { path index } {
 #  Command ComboBox::getvalue
 # ------------------------------------------------------------------------------
 proc ComboBox::getvalue { path } {
-    set values [Widget::getoption $path -values]
+    set values [Widget::getMegawidgetOption $path -values]
     set value  [Entry::cget $path.e -text]
 
     return [lsearch $values $value]
@@ -266,7 +249,6 @@ proc ComboBox::_create_popup { path } {
 		-listvariable [Widget::varForOption $path -values]]
         pack $sw -fill both -expand yes
         $sw setwidget $listb
-#        _update_listbox $path 1
 
         ::bind $listb <ButtonRelease-1> "ComboBox::_select $path @%x,%y"
         ::bind $listb <Return>          "ComboBox::_select $path active; break"
@@ -279,19 +261,6 @@ proc ComboBox::_create_popup { path } {
         pack $sw -fill both -expand yes
         $sw setwidget $listb
         raise $listb
-#        _update_listbox $path 0
-    }
-}
-
-
-# ------------------------------------------------------------------------------
-#  Command ComboBox::_update_listbox
-# ------------------------------------------------------------------------------
-proc ComboBox::_update_listbox {path force} {
-    if {[Widget::hasChanged $path -values values] || $force} {
-        set listb $path.shell.listb
-        $listb delete 0 end
-        eval $listb insert end $values
     }
 }
 
@@ -307,13 +276,13 @@ proc ComboBox::_mapliste { path } {
         return
     }
 
-    if { [Widget::getoption $path -state] == "disabled" } {
+    if { [Widget::cget $path -state] == "disabled" } {
         return
     }
-    if { [set cmd [Widget::getoption $path -postcommand]] != "" } {
+    if { [set cmd [Widget::getMegawidgetOption $path -postcommand]] != "" } {
         uplevel \#0 $cmd
     }
-    if { ![llength [Widget::getoption $path -values]] } {
+    if { ![llength [Widget::getMegawidgetOption $path -values]] } {
         return
     }
     _create_popup $path
@@ -322,7 +291,7 @@ proc ComboBox::_mapliste { path } {
     update
 
     $listb selection clear 0 end
-    set values [Widget::getoption $path -values]
+    set values [Widget::getMegawidgetOption $path -values]
     set curval [Entry::cget $path.e -text]
     if { [set idx [lsearch $values $curval]] != -1 ||
          [set idx [lsearch $values "$curval*"]] != -1 } {
@@ -335,8 +304,7 @@ proc ComboBox::_mapliste { path } {
         $listb see 0
     }
 
-    set frame [LabelFrame::getframe $path.labf]
-    BWidget::place $path.shell [winfo width $frame] 0 below $frame
+    BWidget::place $path.shell [winfo width $path] 0 below $path
     wm deiconify $path.shell
     raise $path.shell
     BWidget::focus set $listb
@@ -369,7 +337,8 @@ proc ComboBox::_select { path index } {
     _unmapliste $path
     if { $index != -1 } {
         if { [setvalue $path @$index] } {
-            if { [set cmd [Widget::cget $path -modifycmd]] != "" } {
+	    set cmd [Widget::getMegawidgetOption $path -modifycmd]
+            if { $cmd != "" } {
                 uplevel \#0 $cmd
             }
         }
@@ -385,7 +354,7 @@ proc ComboBox::_select { path index } {
 # ------------------------------------------------------------------------------
 proc ComboBox::_modify_value { path direction } {
     if { [setvalue $path $direction] } {
-        if { [set cmd [Widget::getoption $path -modifycmd]] != "" } {
+        if { [set cmd [Widget::getMegawidgetOption $path -modifycmd]] != "" } {
             uplevel \#0 $cmd
         }
     }
@@ -426,7 +395,7 @@ proc ComboBox::_focus_out { path } {
     variable background
     variable foreground
 
-    if { [Widget::getoption $path -editable] == 0 } {
+    if { [Widget::cget $path -editable] == 0 } {
         if {[info exists background]} {
             $path.e configure -bg $background
             $path.e configure -fg $foreground
