@@ -1,7 +1,7 @@
 # ------------------------------------------------------------------------------
 #  tree.tcl
 #  This file is part of Unifix BWidget Toolkit
-#  $Id: tree.tcl,v 1.20 2000/03/13 17:21:25 ericm Exp $
+#  $Id: tree.tcl,v 1.21 2000/03/13 18:21:48 ericm Exp $
 # ------------------------------------------------------------------------------
 #  Index of commands:
 #     - Tree::create
@@ -263,7 +263,7 @@ proc Tree::insert { path index parent node args } {
         _redraw_idle $path 3
     } elseif { [visible $path $parent] } {
         # parent is visible...
-        if { [Widget::getoption $path.$parent -open] } {
+        if { [Widget::getMegawidgetOption $path.$parent -open] } {
             # ...and opened -> redraw whole
             _redraw_idle $path 3
         } else {
@@ -333,7 +333,7 @@ proc Tree::itemcget { path node option } {
         return -code error "node \"$node\" does not exist"
     }
 
-    return [Widget::cget $path.$node $option]
+    return [Widget::getMegawidgetOption $path.$node $option]
 }
 
 
